samples/_failures_safe/1761304597_219cf8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14a73da2.c: In function ‘main’:
./samples/SAFE/__tmp_14a73da2.c:174:5: error: expected declaration or statement at end of input
  174 |     }
      |     ^
